--- a/package.json
+++ b/package.json
@@ -14,17 +14,20 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.12.3",
+    "@babel/preset-env": "^7.12.1",
+    "@rollup/plugin-babel": "^5.2.1",
     "@rollup/plugin-commonjs": "^16.0.0",
     "@rollup/plugin-node-resolve": "^10.0.0",
+    "d3": "^5.7.0",
     "eslint": "^7.13.0",
     "eslint-config-standard": "^16.0.1",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
+    "lodash": "^4.17.20",
     "rollup": "^2.33.1",
     "rollup-plugin-eslint": "^7.0.0",
-    "rollup-plugin-terser": "^7.0.2",
-    "d3": "^5.7.0",
-    "lodash": "^4.17.20"
+    "rollup-plugin-terser": "^7.0.2"
   }
 }
