--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "dist/cjs/main.js",
   "module": "dist/esm/main.js",
   "scripts": {
-    "build": "rollup -c",
-    "dev": "rollup -c -w"
+    "build": "rollup -c config/rollup.lib.js",
+    "dev": "rollup -c config/rollup.dev.js -w"
   },
   "files": [
     "dist"
@@ -28,6 +28,8 @@
     "lodash": "^4.17.20",
     "rollup": "^2.33.1",
     "rollup-plugin-eslint": "^7.0.0",
+    "rollup-plugin-livereload": "^2.0.0",
+    "rollup-plugin-serve": "^1.1.0",
     "rollup-plugin-terser": "^7.0.2"
   }
 }
