--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "lint": "eslint --fix --config ./.eslintrc.cjs \"./{src,tests,examples}/**/*.{js,ts}\""
   },
   "dependencies": {
-    "d3": "^7.1.1"
+    "d3": "^7.1.1",
+    "lodash": "^4.17.21"
   },
   "devDependencies": {
     "@types/d3": "^7.1.0",
