--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@typescript-eslint/eslint-plugin": "^4.25.0",
     "@typescript-eslint/parser": "^4.25.0",
     "copy": "^0.3.2",
+    "dagre": "^0.8.5",
     "esbuild": "^0.12.11",
     "esbuild-jest": "^0.5.0",
     "eslint": "^7.27.0",
